fix: aligned previous and next to the right

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/prev-next-topic.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/prev-next-topic.less
@@ -28,4 +28,8 @@
     text-decoration: none;
     margin-left: 0.25rem;
   }
+
+  .gu-pre-next-wrapper {
+    float: right;
+  }
 }
